--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"@ethersproject/address": "^5.6.1",
-		"axios": "^0.27.2"
+		"axios": "^0.27.2",
+		"dotenv": "^16.0.1"
 	}
 }
