--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
     steps:
       - checkout
       - run: echo "$DOCKER_PASSWORD" | docker login --username $DOCKER_USER --password-stdin
-      - run: docker build -t openq/openq-coinapi:$CIRCLE_TAG .
-      - run: docker push openq/openq-coinapi:$CIRCLE_TAG
+      - run: docker build -t openq/openq-token-price-chron:$CIRCLE_TAG .
+      - run: docker push openq/openq-token-price-chron:$CIRCLE_TAG
 workflows:
   version: 2
   build:
