--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node index.js",
+		"test": "jest"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,5 +14,8 @@
 		"@ethersproject/address": "^5.6.1",
 		"axios": "^0.27.2",
 		"dotenv": "^16.0.1"
+	},
+	"devDependencies": {
+		"jest": "^28.1.1"
 	}
 }
