--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
+		"start": "node ./cron.js",
 		"test": "jest"
 	},
 	"keywords": [],
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@ethersproject/address": "^5.6.1",
 		"axios": "^0.27.2",
+		"cron": "^2.0.0",
 		"dotenv": "^16.0.1"
 	},
 	"devDependencies": {
