--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node ./cron.js",
+		"start:dev": "nodemon ./cron.js",
 		"test": "jest"
 	},
 	"keywords": [],
@@ -17,6 +18,7 @@
 		"dotenv": "^16.0.1"
 	},
 	"devDependencies": {
-		"jest": "^28.1.1"
+		"jest": "^28.1.1",
+		"nodemon": "^2.0.18"
 	}
 }
