--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
-OPENQ_API_URL='http://openq-api:4000'
-OPENQ_SUBGRAPH_HTTP_URL='http://graph_node:8000/subgraphs/name/openqdev/openq'
+OPENQ_API_URL=http://openq-api:4000
+OPENQ_SUBGRAPH_HTTP_URL=http://graph_node:8000/subgraphs/name/openqdev/openq
 OPENQ_API_SECRET=secret123!
-INITIAL_WAIT_PERIOD_MS=7000
-DEPLOY_ENV=staging
-CRON_STRING='* * * * * *'
+INITIAL_WAIT_PERIOD_MS=5000
+DEPLOY_ENV=local
+CRON_STRING=10 * * * * *
+PAT=<YOUR_PAT>
