--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@ethersproject/address": "^5.6.1",
-		"axios": "^0.27.2",
-		"cron": "^2.0.0",
-		"dotenv": "^16.0.1"
+		"@ethersproject/address": "5.6.1",
+		"axios": "0.27.2",
+		"cron": "2.0.0",
+		"dotenv": "16.0.1"
 	},
 	"devDependencies": {
-		"jest": "^28.1.1",
-		"nodemon": "^2.0.18"
+		"jest": "28.1.1",
+		"nodemon": "2.0.18"
 	}
 }
