--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,4 @@ OPENQ_API_SECRET=secret123!
 INITIAL_WAIT_PERIOD_MS=5000
 DEPLOY_ENV=local
 CRON_STRING=* 20 * * * *
-PAT=<YOUR_PAT>
+PATS=<YOUR_PATS>
