--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "jest": "29.4.2",
     "nodemon": "2.0.20"
+  },
+  "jest": {
+    "setupFiles": ["dotenv/config"]
   }
 }
