--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@ethersproject/address": "5.7.0",
     "axios": "1.3.3",
     "cron": "2.2.0",
-    "dotenv": "16.0.3"
+    "dotenv": "16.0.3",
+    "ethers": "5.7.2"
   },
   "devDependencies": {
     "jest": "29.4.2",
